fix: whitespaces in code blocks

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -17,6 +17,9 @@
     h2 {
         @apply pt-4 text-2xl;
     }
+    h3 {
+        @apply text-xl;
+    }
 
     a, a:visited {
         @apply text-coda-yellow underline underline-offset-2;
@@ -66,7 +69,7 @@
     }
     
     .article pre {
-        @apply border border-coda-yellow bg-slate-700 mx-2 mt-1 mb-4 px-2 py-1 overflow-x-auto whitespace-nowrap;
+        @apply border border-coda-yellow bg-slate-700 mx-2 mt-1 mb-4 px-2 py-1.5 overflow-x-auto whitespace-nowrap;
     }
 
     /*
